tests/snapshots/fix__turns_a_polygon_arrowhead_at_the_start_of_its_connector.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": -0.0,
  "remainingIssues": 0
}
