tests/snapshots/fix__turns_a_polygon_arrowhead_round_when_it_enters_from_the_other_side-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 700 300">
        <g data-node="source">
          <rect x="20" y="20" width="100" height="56"/>
          <text x="70" y="53" text-anchor="middle" font-size="14">Source</text>
        </g>
        <g data-node="obstacle">
          <rect x="197.5" y="-31" width="65" height="41"/>
          <text x="230" y="-5" text-anchor="middle" font-size="14">Block</text>
        </g>
        <g data-node="target">
          <rect x="300" y="20" width="100" height="56"/>
          <text x="350" y="53" text-anchor="middle" font-size="14">Target</text>
        </g>
        <g id="flow" data-from="source" data-to="target">
          <path d="M 120 48 L 290 48"/>
          <polygon points="290,43 300,48 290,53"/>
        </g>
      </svg>
